--- a/app/src/main/res/layout/act_camerax.xml
+++ b/app/src/main/res/layout/act_camerax.xml
@@ -46,4 +46,12 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".50" />
 
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
