--- a/app/src/main/res/layout/tools_frag_camerax_v2.xml
+++ b/app/src/main/res/layout/tools_frag_camerax_v2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/frag_camerax"
     tools:context=".Tools.ViewPager.Fragment_0_CameraX_v2">
 
     <FrameLayout
