--- a/app/src/main/res/layout/tools_viewpager.xml
+++ b/app/src/main/res/layout/tools_viewpager.xml
@@ -4,4 +4,4 @@
     android:id="@+id/view_pager"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".Tools.ViewPager.PagerAdapter" />
+    tools:context=".Tools.Deprecated.PagerAdapter" />
