--- a/app/src/main/res/layout/tools_camerax.xml
+++ b/app/src/main/res/layout/tools_camerax.xml
@@ -57,7 +57,7 @@
         android:layout_marginBottom="80dp"
         android:scaleType="fitStart"
         android:background="@android:color/transparent"
-        android:src="@drawable/camera_btn"
+        android:src="@drawable/camera_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/container"
         app:layout_constraintHorizontal_bias="0.5"
