--- a/app/src/main/res/layout/act_auth.xml
+++ b/app/src/main/res/layout/act_auth.xml
@@ -94,7 +94,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/auth_btn"
+        android:id="@+id/cheat_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="치트키"
