--- a/app/src/main/res/layout/frag_chatting.xml
+++ b/app/src/main/res/layout/frag_chatting.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextPutMessage"
+                android:id="@+id/editTextChat"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
@@ -41,7 +41,7 @@
                 tools:layout_editor_absoluteY="0dp" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/sendImgBtn"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
