--- a/app/src/main/res/layout/frag_chatting.xml
+++ b/app/src/main/res/layout/frag_chatting.xml
@@ -10,6 +10,7 @@
     tools:context=".Tools.ViewPager.Fragment_1_Chat_v2">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#EBEBEB"
@@ -57,14 +58,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewChatting"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
