fragment - 스와이프 기능 구현중 cameraX - fragment로 구현 완료

--- a/app/src/main/res/layout/frag_dictionary.xml
+++ b/app/src/main/res/layout/frag_dictionary.xml
@@ -6,6 +6,7 @@
     tools:context=".Tools.ViewPager.Fragment_2_Dictionary">
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
