--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/chat_bg"
     tools:context="com.example.mp_app.L1_Intro.SignUpAct">
 
     <Button
         android:id="@+id/signUp_btn"
         android:layout_width="140dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:onClick="signup"
         android:text="회원가입"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,9 +24,9 @@
         android:id="@+id/signUp_email_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="164dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="이메일"
         android:inputType="textPersonName"
@@ -38,9 +39,9 @@
         android:id="@+id/signUp_password_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="비밀번호"
         android:inputType="textPersonName"
