--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
     <TextView
@@ -10,14 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_gravity="left" />
+        android:layout_gravity="left"
+        android:gravity="center_vertical"
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/text_view_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:layout_gravity="right" />
+        android:layout_gravity="right"
+        android:gravity="center_vertical"
+        android:textSize="34sp" />
 
 
 </RelativeLayout>
