fragment - 스와이프 기능 구현중 cameraX - fragment로 구현 완료

--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -17,6 +17,7 @@
     <TextView
         android:id="@+id/text_view_right"
         android:layout_width="wrap_content"
+        android:text="English word"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_gravity="right"
